# pmecg

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  review.md  verify_config.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  _toc.yml  intro.md
docs/api/: index.md
docs/examples/: advanced.md  attention.md  basic.md  cabrera.md  configurations.md  index.md
src/pmecg/: __init__.py  plot.py  types.py
src/pmecg/utils/: attention.py  data.py  plot.py
tests/: output_helpers.py  ptbxl_helper.py  test_attention.py  test_attention_artifacts.py  test_attention_outputs.py  test_data.py  test_plot.py  test_plot_lead_names.py  test_plot_systematic.py  test_ptbxl_artifacts.py  test_ptbxl_outputs.py
