[project]
name = "pmecg"
version = "0.1.0"
description = "Plot ECGs on a paper-like support. Flexible to variable configurations."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Fabio Bonassi", email = "fabio.bonassi@polimi.it" }
]
keywords = ["ecg", "electrocardiogram", "plot", "cardiology", "signal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.3",
]

[project.urls]
Homepage = "https://github.com/bonassifabio/pmecg"
Repository = "https://github.com/bonassifabio/pmecg"
Issues = "https://github.com/bonassifabio/pmecg/issues"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipython",
    "ruff>=0.9",
    "scipy>=1.13.1",
    "requests>=2.28",
    "wfdb>=4.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require network access (PTB-XL download)",
]

[tool.ruff]
target-version = "py39"
line-length = 128

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
