[project]
name = "pmecg"
version = "0.2.0"
description = "Plot ECGs on a paper-like support. Flexible to variable configurations."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Fabio Bonassi", email = "fabio.bonassi@polimi.it" }]
keywords = ["ecg", "electrocardiogram", "plot", "cardiology", "signal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/bonassifabio/pmecg"
Repository = "https://github.com/bonassifabio/pmecg"
Issues = "https://github.com/bonassifabio/pmecg/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "ipython",
    "ruff>=0.9",
    "requests>=2.28",
    "wfdb>=4.0",
]

[tool.pixi.pypi-dependencies]
pmecg = { path = ".", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pmecg"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.tasks]
test = "pytest"
test-fast = "pytest -m 'not integration'"
lint = "ruff check . && ruff format --check ."
build-dist = "python -m build"

# Use the structured object syntax for cross-environment dependencies
test-all = { depends-on = [
    { task = "test", environment = "py38" },
    { task = "test", environment = "py39" },
    { task = "test", environment = "py310" },
    { task = "test", environment = "py311" },
    { task = "test", environment = "py312" },
    { task = "test", environment = "py313" },
    { task = "test", environment = "py314" }
] }

test-all-fast = { depends-on = [
    { task = "test-fast", environment = "py38" },
    { task = "test-fast", environment = "py39" },
    { task = "test-fast", environment = "py310" },
    { task = "test-fast", environment = "py311" },
    { task = "test-fast", environment = "py312" },
    { task = "test-fast", environment = "py313" },
    { task = "test-fast", environment = "py314" }
] }

# 1. Define your version features
[tool.pixi.feature.py38.dependencies]
python = "3.8.*"

[tool.pixi.feature.py39.dependencies]
python = "3.9.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

# 2. Define environments. 
# Pixi automatically maps the [dependency-groups] "dev" to a feature named "dev".
[tool.pixi.environments]
default = ["py312", "dev"]
py38 = ["py38", "dev"]
py39 = ["py39", "dev"]
py310 = ["py310", "dev"]
py311 = ["py311", "dev"]
py312 = ["py312", "dev"]
py313 = ["py313", "dev"]
py314 = ["py314", "dev"]

# --- TOOL CONFIG ---
[tool.pytest.ini_options]
markers = ["integration: tests that require network access"]
filterwarnings = [
    "ignore::DeprecationWarning:matplotlib._fontconfig_pattern",
    "ignore::DeprecationWarning:matplotlib._mathtext",
    "ignore::DeprecationWarning:matplotlib.backends.backend_pdf",
]

[tool.ruff]
target-version = "py38"
line-length = 128

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
